[project]
name = "roam-man"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
dependencies = [
    "dr-util @ git+https://github.com/drothermel/dr_util.git",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/roam_man"]
