[project]
name = "roam-man"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
dependencies = [
    "dr-util @ git+https://github.com/drothermel/dr_util.git",
    "feedparser>=6.0.11",
    "faker>=29.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "jupyterlab-vim>=4.1.3",
    "pytest>=8.3.3",
    "hypothesis>=6.112.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/roam_man"]
